# MrClobberBackyard

./: .gitignore  CMakeLists.txt  CMakePresets.json  GraphicInC.sln  README.md  constants.h  flagManager.h  main.c  map.h  online_map.c  readme.html  test  test.c  test.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ubuntu.yml  windows.yml  workflow.yml
GraphicInC/: constants.h  flagManager.h  main.c  map.h  test.c
GraphicInC/logics/: logics.h
encryption/: encryption.h
logics/: customRandom.h  diceManager.h  logics.h  random.h
networking/: client.h  profile.conf
save/: client.h  fileManager.h  state.txt
windows/: error.h  finishWin.h  startWin.h
